--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
